--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fruitcake/laravel-cors": "^2.0.5",
         "google/cloud-storage": "^1.35",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
         "kutia-software-company/larafirebase": "^1.3",
         "laravel/framework": "^9.0",
