--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME="Oloscrow"
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:Dcn2iMfLDMJZoPzXgrUqbHi+xA6ERxGwBj8N/hYPmBc=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=oloscrow
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=kopiumnet.com
-MAIL_PORT=465
-MAIL_USERNAME=info@kopiumnet.com
-MAIL_PASSWORD="mike47298815Me!"
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=info@kopiumnet.com
+MAIL_HOST=mailhog
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -50,9 +50,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-FIREBASE_SERVER_KEY=AAAAjizquC4:APA91bH-_pKk1dJUbdT69lJVk93VsL6QinKiYliUDimK4_d3PLm8zozNSOfORZFzE8SYROk5A5AIn-t-u2ulaN7CMldSa1gIdK1hYwPu8OY0v4vqigim10XynE_NuUWUXw9eeMosBhAy
-
-
-GOOGLE_CLOUD_PROJECT_ID=oloscrow-406013
-GOOGLE_CLOUD_STORAGE_BUCKET=oloscrow-uploads
