--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
         "jenssegers/agent": "^2.6",
+        "josiasmontag/laravel-recaptchav3": "^1.0",
         "kutia-software-company/larafirebase": "^1.3",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
